--- a/JPAtestView/.classpath
+++ b/JPAtestView/.classpath
@@ -2,6 +2,6 @@
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/JPAtest"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/KayitGUI-SwingJavaJPAPersistenceLayer"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
