--- a/KayitGUI-SwingJavaJPADataLayer/.classpath
+++ b/KayitGUI-SwingJavaJPADataLayer/.classpath
@@ -11,7 +11,7 @@
 			<attribute name="owner.project.facets" value="jpt.jpa"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/Ojdbc">
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/Ojdbc8">
 		<attributes>
 			<attribute name="owner.project.facets" value="jpt.jpa"/>
 		</attributes>
